--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@anthropic-ai/sdk": "^0.27.3",
     "@browserbasehq/sdk": "^2.0.0",
     "sharp": "^0.33.5",
-    "zod-to-json-schema": "^3.23.3"
+    "zod-to-json-schema": "^3.23.3",
+    "ollama": "^1.0.0"
   },
   "directories": {
     "doc": "docs",
