--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.27.3",
     "@browserbasehq/sdk": "^2.0.0",
+    "ollama": "^0.5.10",
     "sharp": "^0.33.5",
-    "zod-to-json-schema": "^3.23.3",
-    "ollama": "^1.0.0"
+    "zod-to-json-schema": "^3.23.3"
   },
   "directories": {
     "doc": "docs",
